Add `OpcUaSubscription::createMonitoredItems` overload
Adds an overload of `createMonitoredItems()` that allows filtering to further restrict the items to create.